--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ defusedxml==0.7.1
 Django==3.1.7
 django-allauth==0.44.0
 django-crispy-forms==1.11.2
+gunicorn==20.1.0
 idna==2.10
 oauthlib==3.1.0
 Pillow==8.2.0
@@ -19,3 +20,4 @@ requests==2.25.1
 requests-oauthlib==1.3.0
 sqlparse==0.4.1
 urllib3==1.26.4
+whitenoise==5.3.0
